# CodeSnippet

./: .gitignore  CMakeLists.txt  README.md  singleton.cpp  stackAllocator.cpp
MemDetect/: MemDetect.sln
MemDetect/MemDetect/: MemDetect.cpp  MemDetect.vcxproj  MemDetect.vcxproj.filters
MemDetect/MemDetect/MemDetect.xcodeproj/: project.pbxproj
MemDetect/MemDetect/MemDetect.xcodeproj/project.xcworkspace/xcuserdata/coppx.xcuserdatad/: UserInterfaceState.xcuserstate
MemDetect/MemDetect/MemDetect.xcodeproj/xcuserdata/coppx.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
MemDetect/MemDetect/MemDetect.xcodeproj/xcuserdata/coppx.xcuserdatad/xcschemes/: xcschememanagement.plist
MemDetect/MemDetect/x64/Debug/: vc143.idb
MemDetect/MemDetect/x64/Debug/MemDetect.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MemDetect.lastbuildstate
include/: MemDetect.cpp  loop_unrolling.cpp  loop_unrolling.h  memDetect.h  singleton.cpp  template_expression.h  template_if_while.h
test/: test_gcd_lcm.cpp  test_loop_unrolling.cpp  test_mem_detect.cpp  test_template_expression.cpp  test_template_if.cpp  test_template_while.cpp
